--- a/packages/frontend/src/pages/Stream/WithdrawModal/withdraw-modal.scss
+++ b/packages/frontend/src/pages/Stream/WithdrawModal/withdraw-modal.scss
@@ -12,6 +12,16 @@
     margin-top: 10px;
   }
 
+  &__error-label {
+    margin-top: 16px;
+    color: $rusty-red;
+    text-align: center;
+  }
+
+  &__error-label:empty {
+    margin-top: 0px;
+  }
+
   &__separator {
     width: calc(100% + 48px);
     height: 1px;
